--- a/posts/2019-02-10-hey.md
+++ b/posts/2019-02-10-hey.md
@@ -12,6 +12,22 @@ Proin suscipit luctus orci placerat fringilla. Donec hendrerit laoreet risus ege
 
 Pellentesque sed sapien lorem, at lacinia urna. In hac habitasse platea dictumst. Vivamus vel justo in leo laoreet ullamcorper non vitae lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin bibendum ullamcorper rutrum.
 
+```jsx
+<S.RecommnendedWrapper>
+  {previous && (
+    <S.RecommnendedLink to={previous.fields.slug} className="previous">
+      {previous.frontmatter.title}
+    </S.RecommnendedLink>
+  )}
+
+  {next && (
+    <S.RecommnendedLink to={next.fields.slug} className="next">
+      {next.frontmatter.title}
+    </S.RecommnendedLink>
+  )}
+</S.RecommnendedWrapper>
+```
+
 Fusce a metus eu diam varius congue nec nec sapien. Vestibulum orci tortor, sollicitudin ac euismod non, placerat ac augue. Nunc convallis accumsan justo. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec malesuada vehicula lectus, viverra sodales ipsum gravida nec.
 
 > Proin ornare ligula eu tellus tempus elementum. Aenean bibendum iaculis mi, nec blandit lacus interdum vitae. Vestibulum non nibh risus, a scelerisque purus. Ut vel arcu ac tortor adipiscing hendrerit vel sed massa. Fusce sem libero, lacinia vulputate interdum non, porttitor non quam. Aliquam sed felis ligula. Duis non nulla magna.
