feat: SEO configs

--- a/posts/2019-02-10-hey.md
+++ b/posts/2019-02-10-hey.md
@@ -4,6 +4,7 @@ title: Hey
 description: Where you goin' with that gun of yours?
 category: CSS
 background: '#7159c1'
+image: '/assets/images/island.jpg'
 ---
 
 Proin suscipit luctus orci placerat fringilla. Donec hendrerit laoreet risus eget adipiscing. Suspendisse in urna ligula, a volutpat mauris. Sed enim mi, [bibendum](http://google.com) eu pulvinar vel, sodales vitae dui.
