Update Posts “2020-12-31-meu-ano-de-2020”

--- a/posts/2020-12-31-meu-ano-de-2020.md
+++ b/posts/2020-12-31-meu-ano-de-2020.md
@@ -92,7 +92,54 @@ Muitas vezes ouvia pessoas dizerem que o LinkedIn abria portas, mas nunca tinha 
 
 <br/>
 
-<h2 id="leitura">Conhecimento aprendidos através da leitura</h2>
+<h2 id="leitura">Leitura</h2>
+
+Esse foi com certeza, o ano em que mais li! Desde 2018, onde comprei meu Kindle, minha vida mudou. Comecei a ler porque eu queria, não por obrigação, o que fez toda a diferença. 
+
+Em dois anos, li mais livros que em minha vida inteira, e vejo o impacto positivo que esse simples ato me proporcionou. Pretendo indicar livros com mais frequência a partir do ano que vem. Se você ainda não deu uma chance para a leitura, faça isso. Pois, quando ler o livro certo no momento certo, sua vida será diferente.
+
+<br/>
+
+<h2 id="pandemia">Pandemia, problemas de saúde e saída do emprego</h2>
+
+Quando os primeiros casos de covid-19 foram confirmados no Brasil, eu estava no meu antigo emprego, onde trabalhava presencialmente. O que na época, não preocupou muito, pois moro em uma cidade bem pequena no interior do estado.
+
+Porém, a medida que o vírus avançava, tínhamos notícias que ele estava cada vez mais perto, ao mesmo tempo que o número de casos graves e mortes só crescia no país. A sensação de perigo só aumentava a cada dia. O que no meu caso agravou mais, é que minha mãe está em tratamento, e precisa viajar 2 vezes por mês até a capital. 
+
+Isso nos afetou muito, pois a cada viagem, o perigo era gigante (ainda é). O que acabou acarretando na minha saída, nos mês de agosto, do meu antigo emprego, onde estava a quase 2 anos. 
+
+<br/>
+
+<h2 id="blog">Blog</h2>
+
+O mês de agosto não foi marcado por momentos ruins, pois foi nesse mês que realizei um sonho antigo, criar meu próprio site o coloca-lo no ar. E assim eu fiz, no dia 18 de agosto, o <a href="https://devjuniorplus.com.br/" target="_blank" rel="noopener noreferrer">DevJuniorPlus</a> estava no ar e com o primeiro post. Até o momento, tem 20 posts, sobre assuntos variados, principalmente desenvolvimento web e livros.
+
+<br/>
+
+<h2 id="youtube">Canal no YouTube</h2>
+
+Outro objetivo alcançado durante esse ano, foi a criação do meu <a href="https://www.youtube.com/channel/UCERTT0Z4u-0dFask_kL83sw" target="_blank" rel="noopener noreferrer">canal no YouTube</a> (DevJuniorPlus). Onde já possui 3 vídeos publicados, e tenho planos em andamento de trazer mais conteúdos sobre desenvolvimento web, tutoriais, indicações de livros e etc.
+<br/>
+
+<h2 id="saida-smart">Saída da Smart Envios</h2>
+
+Creio que essa foi a decisão mais difícil que tive que tomar nesse ano.
+
+Do final do ano de 2019 até 2020, meu foco estava em adquirir conhecimentos para conquistar minha primeira oportunidade como dev junior, o que depois de praticamente 1 ano de muito foco e consistência, eu consegui. Entrei na Smart Envios, que como falei acima, no curto período de tempo em que estive lá, aprendi bastante, conheci pessoas incríveis, e havia alcançado minha tão esperada de Desenvolvedor Junior.
+
+Porém, nesse mesmo período, foi um dos momentos mais conturbados desse ano para mim, onde as viagens de minha mãe se tornaram mais frequentes, e devido a esse momento, acabei tomando a decisão de dar uma pausa no contrato com a empresa, que foi extremamente atenciosa e prestativa durante esse período. 
+
+Agora, poucos meses depois, vejo que por mais que não fosse a decisão que eu queria, tomei a decisão certa naquele momento.
+
+<br/>
+
+<h2 id="futuro">Futuro em 2021</h2>
+
+Bom, para terminar com o ânimo bem alto, queria compartilhar com você que, não, não desisti da profissão, pois creio que encontrei meu propósito de vida, criar aplicações para um usuário final, é algo que eu realmente gostei bastante. Resolver um problema de algum através da programação, é isso que quero continuar fazendo nos próximos anos!
+
+Outro ponto importante, não desista dos seus sonhos, por mais difíceis que possam parecer, continue, faça de cada dia um degrau na escada que está construindo até seus sonhos. Basta ter foco nos seus sonhos e ser consistente, daí é só questão de tempo até alcança-los.
+
+
 
 <hr/>
 
